# ros2_6dof_arm_control

./: .clang-format  .flake8  .gitignore  Dockerfile  LICENSE  README.md  config.rviz  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: joint_trajectory.md  stall_diagnosis.md
docs/evaluation/: 20260114_193440_ik_dls_position_convergence.csv  20260114_193440_ik_dls_rotation_convergence.csv
scripts/: clang_format_all.sh  demo.sh  diagnose_stalls.py  format_media.sh  monitor_lag.py  plot_ik_convergence.py  py_format_all.sh  run_experiment.sh
src/arm_apps/: CMakeLists.txt  DEBUG_TRAJECTORY.md  package.xml
src/arm_apps/action/: GoToPose.action
src/arm_apps/config/: demo_targets.yaml
src/arm_apps/include/arm_apps/: ik_dls.hpp  joint_limits.hpp  joint_mapping.hpp  joint_trajectory.hpp  urdf_chain_fk.hpp
src/arm_apps/src/: demo_sequence_node.cpp  draw_circle_cartesian_node.cpp  go_to_pose_cli.cpp  go_to_pose_node.cpp  ik_convergence_eval_node.cpp  ik_dls.cpp  joint_limits.cpp  joint_mapping.cpp  joint_trajectory.cpp  joint_trajectory_viz_node.cpp  urdf_chain_fk.cpp
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/config/rviz/: default.rviz
src/arm_bringup/launch/: circle_cartesian.demo.launch.py  go_to_pose.launch.py  ik_convergence_eval.launch.py  joint_traj_viz.launch.py  pick_and_place.demo.launch.py  rviz.launch.py  sim.launch.py
src/arm_bringup/scripts/: ee_trail  ensure_controllers_active
src/arm_bringup/worlds/: ur5_world.world
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/config/: ros2_controllers.yaml
src/arm_description/: CMakeLists.txt  README.md  package.xml
src/arm_description/src/: arm_description_node.cpp
src/arm_description/urdf/: ur5.urdf
src/arm_description/xacro/: ur5.gazebo.xacro  ur5.transmission.xacro  ur5.xacro
